--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,21 @@ h2 {
   margin-top: 5px; }
 
 img {
-  padding-left: 2.75px;
-  padding-top: 2.5px; }
+  padding-left: 15px;
+  padding-top: 2.5px;
+  max-width: 335px; }
 
 .card {
   background-color: #9D9D9D; }
 
 body {
   background-color: #CED7DB; }
+
+.isClicked {
+  border: 5px solid #009587 !important;
+  color: white;
+  background-color: #393838; }
+  .isClicked h2 {
+    background-color: inherit; }
 
 /*# sourceMappingURL=main.css.map */
